terraform/terragrunt/local/kind-argocd/apps/sentiment/overlays/uat/route-sentiment.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sentiment-route
  labels:
    app.kubernetes.io/name: sentiment-route
    app.kubernetes.io/part-of: sentiment
spec:
  parentRefs:
    - name: azure-auth-gateway
      namespace: azure-auth-gateway
  hostnames:
    - sentiment.uat.127.0.0.1.sslip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: SnippetsFilter
            name: http-to-https-redirect
      backendRefs:
        - name: apim-sentiment-uat
          namespace: azure-apim-sim
          port: 8000
          kind: Service

    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: SnippetsFilter
            name: http-to-https-redirect
      backendRefs:
        - name: sentiment-frontend
          port: 80
          kind: Service
